Fix T46411: Experimental deps graph causes particles to jump around